[gd_scene load_steps=14 format=2]

[ext_resource path="res://Entities/Guards/Guard-Corpse/Guard-Corpse.BloodTrail.width_curve.tres" type="Curve" id=1]
[ext_resource path="res://Entities/Guards/Guard-Corpse/Guard-Corpse.BloodSplash.scale_amount_curve.tres" type="Curve" id=2]
[ext_resource path="res://Shaders/Particles/BloodSplatterDecap.CPUParticles2D.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/VisibilityHandler.tscn" type="PackedScene" id=4]
[ext_resource path="res://Shaders/Particles/BloodSplatter.CPUParticles2D.tscn" type="PackedScene" id=5]
[ext_resource path="res://Entities/Enntities.png" type="Texture" id=6]
[ext_resource path="res://Entities/Guards/Guard-Corpse/Guard-Corpse.BloodSplash.material.tres" type="Material" id=7]
[ext_resource path="res://Entities/Guards/Guard-Corpse/Guard-Corpse.BloodTrailTrigger.CollisionShape2D.shape.tres" type="Shape2D" id=8]
[ext_resource path="res://Entities/Guards/Guard-Corpse/Guard-Corpse.BloodTrail.gradient.tres" type="Gradient" id=9]
[ext_resource path="res://Shaders/Particles/BloodSplatters.png" type="Texture" id=10]
[ext_resource path="res://Shaders/Particles/BloodTrail.png" type="Texture" id=11]
[ext_resource path="res://Entities/Guards/Guard-Corpse/Guard-Corpse.gd" type="Script" id=12]

[sub_resource type="CanvasItemMaterial" id=2]
particles_animation = true
particles_anim_h_frames = 10
particles_anim_v_frames = 1
particles_anim_loop = false

[node name="Guard-Corpse" type="Node2D"]
script = ExtResource( 12 )

[node name="Position2D" type="Position2D" parent="."]

[node name="BloodTrail" type="Line2D" parent="."]
width = 24.0
width_curve = ExtResource( 1 )
default_color = Color( 0.760784, 0.027451, 0.027451, 1 )
gradient = ExtResource( 9 )
texture = ExtResource( 11 )
texture_mode = 1
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
round_precision = 4

[node name="BloodTrailTrigger" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BloodTrailTrigger"]
shape = ExtResource( 8 )

[node name="BloodSplatter" parent="." instance=ExtResource( 5 )]
material = SubResource( 2 )
position = Vector2( 0, 0 )
emitting = false
amount = 3
initial_velocity = 30.0

[node name="BloodSplattersS" type="Node2D" parent="."]
scale = Vector2( 0.25, 0.25 )

[node name="BloodSplatter1" parent="BloodSplattersS" instance=ExtResource( 5 )]
material = SubResource( 2 )
position = Vector2( -144, -68 )
emitting = false
amount = 3
initial_velocity = 30.0

[node name="BloodSplatter2" parent="BloodSplattersS" instance=ExtResource( 5 )]
material = SubResource( 2 )
position = Vector2( 4, 124 )
emitting = false
amount = 3
initial_velocity = 30.0

[node name="BloodSplatter3" parent="BloodSplattersS" instance=ExtResource( 5 )]
material = SubResource( 2 )
position = Vector2( 68, -116 )
emitting = false
amount = 3
initial_velocity = 30.0

[node name="Torso" type="Sprite" parent="."]
rotation = -1.5708
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 128, 320, 32, 32 )

[node name="Head" type="Sprite" parent="Torso"]
position = Vector2( -1, -21 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 96, 288, 32, 32 )
__meta__ = {
"_editor_description_": "+-30 rot deg"
}

[node name="RArm-Blood" type="Node2D" parent="Torso"]
position = Vector2( -9, -12 )

[node name="BloodSplatterDecap" parent="Torso/RArm-Blood" instance=ExtResource( 3 )]
position = Vector2( -16, -1 )

[node name="RArm" type="Sprite" parent="Torso"]
position = Vector2( -9, -14 )
texture = ExtResource( 6 )
offset = Vector2( -14, 0 )
region_enabled = true
region_rect = Rect2( 96, 352, 32, 32 )
__meta__ = {
"_editor_description_": "+-90 rot deg"
}

[node name="Hand" type="Sprite" parent="Torso/RArm"]
position = Vector2( -17, 1 )
texture = ExtResource( 6 )
offset = Vector2( -2, 2 )
region_enabled = true
region_rect = Rect2( 96, 384, 32, 32 )
__meta__ = {
"_editor_description_": "0 - 180 rot deg"
}

[node name="Hand-BloodSplatterDecap" parent="Torso/RArm" instance=ExtResource( 3 )]
show_behind_parent = true
position = Vector2( -31, 1 )

[node name="LArm-Blood" type="Node2D" parent="Torso"]
position = Vector2( 10, -12 )
scale = Vector2( -1, 1 )

[node name="BloodSplatterDecap" parent="Torso/LArm-Blood" instance=ExtResource( 3 )]
position = Vector2( -16, 0 )

[node name="LArm" type="Sprite" parent="Torso"]
position = Vector2( 9, -14 )
texture = ExtResource( 6 )
offset = Vector2( 14, 0 )
flip_h = true
region_enabled = true
region_rect = Rect2( 96, 352, 32, 32 )
__meta__ = {
"_editor_description_": "+-90 rot deg"
}

[node name="Hand" type="Sprite" parent="Torso/LArm"]
position = Vector2( 16, 1 )
texture = ExtResource( 6 )
offset = Vector2( 2, 2 )
flip_h = true
region_enabled = true
region_rect = Rect2( 96, 384, 32, 32 )
__meta__ = {
"_editor_description_": "0 - 180 rot deg"
}

[node name="Hand-BloodSplatterDecap" parent="Torso/LArm" instance=ExtResource( 3 )]
show_behind_parent = true
position = Vector2( 30, 1 )
scale = Vector2( -1, 1 )

[node name="RLeg-Blood" type="Node2D" parent="Torso"]
position = Vector2( -5, 15 )

[node name="BloodSplatterDecap" parent="Torso/RLeg-Blood" instance=ExtResource( 3 )]
position = Vector2( 1, 15 )
rotation = -1.5708

[node name="RLeg" type="Sprite" parent="Torso"]
position = Vector2( -4, 14 )
texture = ExtResource( 6 )
offset = Vector2( -2, 16 )
region_enabled = true
region_rect = Rect2( 96, 416, 32, 32 )
__meta__ = {
"_editor_description_": "30 -15 rot deg"
}

[node name="Feet" type="Sprite" parent="Torso/RLeg"]
position = Vector2( 0, 15 )
texture = ExtResource( 6 )
offset = Vector2( -2, 3 )
region_enabled = true
region_rect = Rect2( 96, 448, 32, 32 )
__meta__ = {
"_editor_description_": "0 -60 rot deg"
}

[node name="Feet-BloodSplatterDecap" type="Node2D" parent="Torso/RLeg"]
position = Vector2( -1, 15 )

[node name="BloodSplatterDecap" parent="Torso/RLeg/Feet-BloodSplatterDecap" instance=ExtResource( 3 )]
position = Vector2( 1, 15 )
rotation = -1.5708

[node name="LLeg-Blood" type="Node2D" parent="Torso"]
position = Vector2( 5, 15 )

[node name="BloodSplatterDecap" parent="Torso/LLeg-Blood" instance=ExtResource( 3 )]
position = Vector2( 1, 15 )
rotation = -1.5708

[node name="LLeg" type="Sprite" parent="Torso"]
position = Vector2( 4, 15 )
texture = ExtResource( 6 )
offset = Vector2( 2, 16 )
flip_h = true
region_enabled = true
region_rect = Rect2( 96, 416, 32, 32 )
__meta__ = {
"_editor_description_": "30 -15 rot deg"
}

[node name="Feet" type="Sprite" parent="Torso/LLeg"]
position = Vector2( 0, 15 )
texture = ExtResource( 6 )
offset = Vector2( 2, 3 )
flip_h = true
region_enabled = true
region_rect = Rect2( 96, 448, 32, 32 )
__meta__ = {
"_editor_description_": "0 -60 rot deg"
}

[node name="Feet-BloodSplatterDecap" type="Node2D" parent="Torso/LLeg"]
position = Vector2( 0, 15 )

[node name="BloodSplatterDecap" parent="Torso/LLeg/Feet-BloodSplatterDecap" instance=ExtResource( 3 )]
position = Vector2( 1, 15 )
rotation = -1.5708

[node name="BloodSplash" type="CPUParticles2D" parent="."]
material = ExtResource( 7 )
z_index = 1
z_as_relative = false
emitting = false
amount = 32
lifetime = 2.0
one_shot = true
speed_scale = 2.0
explosiveness = 0.87
lifetime_randomness = 0.35
fract_delta = false
texture = ExtResource( 10 )
emission_shape = 1
emission_sphere_radius = 16.0
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 70.42
scale_amount = 0.05
scale_amount_random = 0.35
scale_amount_curve = ExtResource( 2 )
color = Color( 0.898039, 0, 0, 1 )

[node name="VisibilityHandler" parent="." instance=ExtResource( 4 )]
visible = false
position = Vector2( 0.499994, 6 )
scale = Vector2( 5.25, 5.2 )
process_parent = true
physics_process_parent = true

[connection signal="tree_entered" from="Position2D" to="." method="_on_Position2D_tree_entered"]
[connection signal="tree_entered" from="BloodTrail" to="." method="_on_BloodTrail_tree_entered"]
[connection signal="body_entered" from="BloodTrailTrigger" to="." method="_on_BloodTrailTrigger_body_entered"]
